# TemperatureMonitor_MQTT

./: LICENSE  MAC address list.txt  README.md  README.rst  Temperatuur sensoren.xlsx  development-requirements.txt  pyproject.toml  test mqtt.py  test onewire.py  test structure.py
.github/workflows/: python-app.yml  python-publish.yml
Fritzing/: Vloerverwarming monitor.fzz
TESTDIR/: pyvenv.cfg
TESTDIR/Scripts/: Activate.ps1  activate  activate.bat
drafts/: sensor_list.json  test syslog.py
drafts/TestJSON/: SensorJSON.py  T1.json  TestJSON.py  _sensor_list.json  sample.json  sample2.json  sensor_list.json
src/: ha_heating_monitor.py
src/VloerverwarmingMonitor_sldewit/: VloerverwarmingMonitor.py
src/temperature_monitoring_mqtt_sldewit/: temperatue_monitor_mqtt.py  temperature_monitor_mqtt.py
src/vloerverwarming_monitor_sldewit/: vloerverwarming_monitor.py
