[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "VloerverwarmingMonitor_sldewit"
version = "0.0.3"
authors = [
  { name="Stephan de Wit", email="stephan@de-wit.me" },
]
description = "Monitoring systeem voor vloerverwarming"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "paho-mqtt==1.6.1",
    "pi1wire==0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/sldewit/VloerverwarmingMonitor"
"Bug Tracker" = "https://github.com/sldewit/VloerverwarmingMonitor/issues"