[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TemperatureMonitor_MQTT_sldewit"
version = "1.0.0"
authors = [
  { name="Stephan de Wit", email="stephan@de-wit.me" },
]
description = "Temperature Monitoring system using MQTT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "paho-mqtt==1.6.1",
    "pi1wire==0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/sldewit/TemperatureMonitor_MQTT"
"Bug Tracker" = "https://github.com/sldewit/TemperatureMonitor_MQTT/issues"
