[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HA_Heating_Monitor"
version = "1.0.0"
authors = [
  { name="Stephan de Wit", email="stephan@de-wit.me" },
]
description = "Heating circuit monitoring system for Home Assistant using MQTT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "paho-mqtt==1.6.1",
    "pi1wire==0.3.0",
    "gpiozero==2.0.1"
]

[project.urls]
"Homepage" = "https://github.com/sldewit/TemperatureMonitor_MQTT"
"Bug Tracker" = "https://github.com/sldewit/TemperatureMonitor_MQTT/issues"
